# irods_rule_engine_plugins_policy

./: CMakeLists.txt  README.md  access_time.cmake  data_movement.cmake  data_object_modified_utilities.cpp  data_object_modified_utilities.hpp  data_replication.cmake  data_retention.cmake  data_verification.cmake  data_verification_utilities.cpp  data_verification_utilities.hpp  event_delegate_collection_metadata.cmake  event_generator_object_metadata.cmake  event_generator_resource_metadata.cmake  event_handler_collection_modified.cmake  event_handler_data_object_modified.cmake  event_handler_group_modified.cmake  event_handler_metadata_modified.cmake  event_handler_resource_modified.cmake  event_handler_user_modified.cmake  event_handler_utilities.cpp  event_handler_utilities.hpp  event_handler_zone_modified.cmake  example_data_retention_invocation.r  filesystem_usage.cmake  general_administration_handler.hpp  libirods_rule_engine_plugin-event_delegate-collection_metadata.cpp  libirods_rule_engine_plugin-event_generator-object_metadata.cpp  libirods_rule_engine_plugin-event_generator-resource_metadata.cpp  libirods_rule_engine_plugin-event_handler-collection_modified.cpp  libirods_rule_engine_plugin-event_handler-data_object_modified.cpp  libirods_rule_engine_plugin-event_handler-group_modified.cpp  libirods_rule_engine_plugin-event_handler-metadata_modified.cpp  libirods_rule_engine_plugin-event_handler-resource_modified.cpp  libirods_rule_engine_plugin-event_handler-user_modified.cpp  libirods_rule_engine_plugin-event_handler-zone_modified.cpp  libirods_rule_engine_plugin-policy_engine-access_time.cpp  libirods_rule_engine_plugin-policy_engine-data_movement.cpp  libirods_rule_engine_plugin-policy_engine-data_replication.cpp  libirods_rule_engine_plugin-policy_engine-data_retention.cpp  (+13 more)
packaging/: test_plugin_event_delegate-collection_metadata.py  test_plugin_event_generator-object_metadata.py  test_plugin_event_generator-resource_metadata.py  test_plugin_event_handler-collection_modified.py  test_plugin_event_handler-data_object_modified.py  test_plugin_event_handler-metadata_modified.py  test_plugin_event_handler-resource_modified.py  test_plugin_event_handler-user_modified.py  test_plugin_policy_engine-access_time.py  test_plugin_policy_engine-data_movement.py  test_plugin_policy_engine-data_replication.py  test_plugin_policy_engine-data_retention.py  test_plugin_policy_engine-data_verification.py  test_plugin_policy_engine-filesystem_usage.py  test_plugin_policy_engine-query_iterator.py  test_plugin_policy_engine-query_processor.py  test_plugin_policy_engine-verify_checksum.py
